[gd_scene load_steps=24 format=2]

[ext_resource path="res://UI/Controls/Controls.gd" type="Script" id=1]
[ext_resource path="res://UI/Controls/controls.png" type="Texture" id=2]
[ext_resource path="res://Player/Playersheet.png" type="Texture" id=3]
[ext_resource path="res://Player/dagger.png" type="Texture" id=4]
[ext_resource path="res://UI/InventoryWPlayer.png" type="Texture" id=5]
[ext_resource path="res://UnderGroundWorld/SpiderChestEmpty.png" type="Texture" id=6]
[ext_resource path="res://UnderGroundWorld/SpiderChestOpen.png" type="Texture" id=7]

[sub_resource type="Animation" id=2]
resource_name = "WR"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../PlayerSheet/WR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/PlayerSheet/WL:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "WL"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/PlayerSheet/WL:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSheet/Swing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Swing"
length = 1.5
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSheet/Swing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=8]
resource_name = "WL"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/PlayerSheet/WL:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Dagger"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Dagger:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 121.966, 80.4082 ), Vector2( 127.966, 80.4082 ), Vector2( 135.966, 80.4082 ), Vector2( 151.966, 80.4082 ), Vector2( 156.349, 80.6888 ), Vector2( 179.769, 80.5204 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dagger:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Dagger:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 121.966, 80.4082 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dagger:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "Swing"
length = 1.5
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSheet/Swing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=12]
resource_name = "WL"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/PlayerSheet/WL:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Shield:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 16 ]
}

[sub_resource type="Animation" id=14]
resource_name = "Shield"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Shield:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 21, 20, 19 ]
}

[sub_resource type="Animation" id=15]
resource_name = "Jump"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../PlayerSheet/Jump:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 118.535, 58.4289 ), Vector2( 118.535, 56.4289 ), Vector2( 118.535, 54.4289 ), Vector2( 118.535, 53.4289 ), Vector2( 118.535, 54.4289 ), Vector2( 118.535, 56.4289 ), Vector2( 118.535, 57.4289 ), Vector2( 118.535, 58.4289 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../PlayerSheet/Jump:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 118.535, 58.4289 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Chest"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../PlayerSheet/SpiderChestOpen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../PlayerSheet/SpiderChestEmpty:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../PlayerSheet/SpiderChestOpen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Controls" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ControlsBackground" type="Sprite" parent="CanvasLayer"]
position = Vector2( 159.976, 90.3065 )
texture = ExtResource( 2 )

[node name="Space label" type="Label" parent="CanvasLayer/ControlsBackground"]
margin_left = -144.091
margin_top = -46.8229
margin_right = -124.091
margin_bottom = -32.8229
rect_scale = Vector2( 0.75, 0.75 )
text = "|_|"
valign = 1

[node name="AttackDesc" type="Label" parent="CanvasLayer/ControlsBackground/Space label"]
margin_left = 26.0
margin_top = -17.0
margin_right = 159.0
margin_bottom = 38.0
rect_scale = Vector2( 0.75, 0.75 )
text = "Press \"Space\" to swing a sword which damages enemies"
align = 1
valign = 1
autowrap = true

[node name="E label" type="Label" parent="CanvasLayer/ControlsBackground"]
margin_left = -139.131
margin_top = -14.1479
margin_right = -128.131
margin_bottom = -0.147858
rect_scale = Vector2( 0.75, 0.75 )
text = "E"
valign = 1

[node name="DaggerDesc" type="Label" parent="CanvasLayer/ControlsBackground/E label"]
margin_left = 17.0
margin_top = -15.0
margin_right = 177.0
margin_bottom = 65.0
rect_scale = Vector2( 0.65, 0.5 )
text = "Press \"E\" to throw a dagger which can hit enemies from far distances"
align = 1
valign = 1
autowrap = true

[node name="F label" type="Label" parent="CanvasLayer/ControlsBackground"]
margin_left = -139.416
margin_top = 17.7156
margin_right = -128.416
margin_bottom = 31.7156
rect_scale = Vector2( 0.75, 0.75 )
text = "F"
valign = 1

[node name="ShieldDesc" type="Label" parent="CanvasLayer/ControlsBackground/F label"]
margin_left = 17.5034
margin_top = -13.6258
margin_right = 172.503
margin_bottom = 64.3742
rect_scale = Vector2( 0.65, 0.5 )
text = "Press \"F\" to pull out a shield which blocks projectiles and blocks enemies"
align = 1
valign = 1
autowrap = true

[node name="Q label" type="Label" parent="CanvasLayer/ControlsBackground"]
margin_left = -140.646
margin_top = 50.4621
margin_right = -127.646
margin_bottom = 64.4621
rect_scale = Vector2( 0.75, 0.75 )
text = "Q"
valign = 1

[node name="InvDesc" type="Label" parent="CanvasLayer/ControlsBackground/Q label"]
margin_left = 20.297
margin_top = -14.8909
margin_right = 151.297
margin_bottom = 84.1091
rect_scale = Vector2( 0.75, 0.4 )
text = "Press \"Q\" to open inventory which shows owned items and displays items that are currently equipped"
align = 1
valign = 1
autowrap = true

[node name="W label" type="Label" parent="CanvasLayer/ControlsBackground"]
margin_left = 3.476
margin_top = -45.8726
margin_right = 16.476
margin_bottom = -31.8726
rect_scale = Vector2( 0.75, 0.75 )
text = "W"
align = 1

[node name="JumpDesc" type="Label" parent="CanvasLayer/ControlsBackground/W label"]
margin_left = 21.0
margin_top = -20.0
margin_right = 153.0
margin_bottom = 38.0
rect_scale = Vector2( 0.75, 0.75 )
text = "Press \"W\" to jump over enemies and obstacles"
align = 1
valign = 1
autowrap = true

[node name="A label" type="Label" parent="CanvasLayer/ControlsBackground"]
margin_left = 4.38112
margin_top = -15.0122
margin_right = 17.3811
margin_bottom = -1.01218
rect_scale = Vector2( 0.75, 0.75 )
text = "A"
valign = 1

[node name="WalkLDesc" type="Label" parent="CanvasLayer/ControlsBackground/A label"]
margin_left = 18.3242
margin_top = -15.251
margin_right = 150.324
margin_bottom = 42.749
rect_scale = Vector2( 0.75, 0.75 )
text = "Press \"A\" to move left"
align = 1
valign = 1
autowrap = true

[node name="D label" type="Label" parent="CanvasLayer/ControlsBackground"]
margin_left = 4.33054
margin_top = 16.8854
margin_right = 17.3305
margin_bottom = 30.8854
rect_scale = Vector2( 0.75, 0.75 )
text = "D"
valign = 1

[node name="WalkRDesc" type="Label" parent="CanvasLayer/ControlsBackground/D label"]
margin_left = 18.2757
margin_top = -15.8827
margin_right = 150.276
margin_bottom = 42.1173
rect_scale = Vector2( 0.75, 0.75 )
text = "Press \"D\" to move right"
align = 1
valign = 1
autowrap = true

[node name="Enter label" type="Label" parent="CanvasLayer/ControlsBackground"]
margin_left = 1.02362
margin_top = 48.8016
margin_right = 19.0236
margin_bottom = 62.8016
rect_scale = Vector2( 0.75, 0.75 )
text = "<--"
valign = 1

[node name="InterDesc" type="Label" parent="CanvasLayer/ControlsBackground/Enter label"]
margin_left = 23.7925
margin_top = -15.333
margin_right = 155.793
margin_bottom = 42.667
rect_scale = Vector2( 0.75, 0.75 )
text = "Press \"Enter\" to interact with doors and items"
align = 1
valign = 1
autowrap = true

[node name="PlayerSheet" type="Node2D" parent="CanvasLayer"]

[node name="WR" type="Sprite" parent="CanvasLayer/PlayerSheet"]
position = Vector2( 117.98, 123.326 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
offset = Vector2( 202.017, -15.0116 )
hframes = 22
frame = 4

[node name="WRAnimation" type="AnimationPlayer" parent="CanvasLayer/PlayerSheet"]
root_node = NodePath("../../ControlsBackground")
anims/WR = SubResource( 2 )

[node name="WL" type="Sprite" parent="CanvasLayer/PlayerSheet"]
position = Vector2( 280.324, 79.0726 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
hframes = 22
frame = 5

[node name="WLAnimation" type="AnimationPlayer" parent="CanvasLayer/PlayerSheet"]
root_node = NodePath("../../..")
anims/RESET = SubResource( 4 )
anims/WL = SubResource( 5 )

[node name="Swing" type="Sprite" parent="CanvasLayer/PlayerSheet"]
position = Vector2( -25.242, 57.2707 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
offset = Vector2( 202.017, -15.0116 )
hframes = 22
frame = 10

[node name="SwingAnimation" type="AnimationPlayer" parent="CanvasLayer/PlayerSheet"]
root_node = NodePath("../..")
anims/RESET = SubResource( 6 )
anims/Swing = SubResource( 7 )
anims/WL = SubResource( 8 )

[node name="Dagger" type="Sprite" parent="CanvasLayer/PlayerSheet"]
visible = false
position = Vector2( 121.966, 80.4082 )
rotation = 0.785398
texture = ExtResource( 4 )

[node name="DaggerAnimation" type="AnimationPlayer" parent="CanvasLayer/PlayerSheet"]
anims/Dagger = SubResource( 9 )
anims/RESET = SubResource( 10 )
anims/Swing = SubResource( 11 )
anims/WL = SubResource( 12 )

[node name="Shield" type="Sprite" parent="CanvasLayer/PlayerSheet"]
position = Vector2( -25.3058, 124.012 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
offset = Vector2( 202.017, -15.0116 )
hframes = 22
frame = 16

[node name="ShieldAnimation" type="AnimationPlayer" parent="CanvasLayer/PlayerSheet"]
anims/RESET = SubResource( 13 )
anims/Shield = SubResource( 14 )

[node name="InventoryWPlayer" type="Sprite" parent="CanvasLayer/PlayerSheet"]
position = Vector2( 136.1, 144.27 )
scale = Vector2( 0.295313, 0.335394 )
texture = ExtResource( 5 )

[node name="Jump" type="Sprite" parent="CanvasLayer/PlayerSheet"]
position = Vector2( 118.535, 58.4289 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
offset = Vector2( 202.017, -15.0116 )
hframes = 22
frame = 4

[node name="JumpAnimation" type="AnimationPlayer" parent="CanvasLayer/PlayerSheet"]
root_node = NodePath("../../ControlsBackground")
anims/Jump = SubResource( 15 )
anims/RESET = SubResource( 16 )

[node name="SpiderChestEmpty" type="Sprite" parent="CanvasLayer/PlayerSheet"]
position = Vector2( 281.53, 147.13 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

[node name="SpiderChestOpen" type="Sprite" parent="CanvasLayer/PlayerSheet"]
position = Vector2( 281.497, 147.121 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 7 )

[node name="ChestAnimation" type="AnimationPlayer" parent="CanvasLayer/PlayerSheet"]
root_node = NodePath("../../ControlsBackground")
anims/Chest = SubResource( 17 )
anims/RESET = SubResource( 18 )

[node name="Label" type="Label" parent="CanvasLayer/PlayerSheet"]
margin_left = 7.07108
margin_top = 5.3033
margin_right = 316.071
margin_bottom = 30.3033
text = "Press \"R\" to open and Close this Control Panel"
align = 1
valign = 1
